# PhysicsEngine

./: CMakeLists.txt  PhysicsEngine  README.md  SDL
Test/: .clang_complete  CMakeLists.txt  ODE.cpp  World.cpp  main.cpp
lib/SDL/: .clang_complete  CMakeLists.txt  SDL
lib/SDL/inc/: drawable.h  engine.h  event.h  exception.h  log.h  misc.h  renderer.h  timer.h  window.h
lib/SDL/src/: engine.cpp  event.cpp  exception.cpp  renderer.cpp  timer.cpp  window.cpp
sdlTests/: .clang_complete  CMakeLists.txt
sdlTests/fallingBall/: main.cpp
sdlTests/octopusTest/: main.cpp
source/: .clang_complete  CMakeLists.txt
source/inc/: math  misc  octopus  ode  world
source/inc/src/math/: Vector2D.h  VectorXD.h  transform.h
source/inc/src/misc/: memory.h
source/inc/src/octopus/: arm.h  axialFrictionConstraint.h  baseConstraint.h  bouyancyForce.h  compartment.h  constants.h  constrainedObject.h  muscleConstraint.h  octopus.h  pressureConstraint.h  repulsionForce.h  rotationConstrainedObject.h  sphericalFrictionForce.h
source/inc/src/ode/: Euler.h  ODE.h  ODESolver.h  PointMass2D.h  RK4.h
source/inc/src/world/: constraint.h  force.h  gravity.h  limitConstraint.h  object.h  world.h
source/src/octopus/: arm.cpp  compartment.cpp
source/src/world/: object.cpp  world.cpp
